; ModuleID = '/home/carl/AnghaBench/git/refs/extr_files-backend.c_should_pack_ref.c'
source_filename = "/home/carl/AnghaBench/git/refs/extr_files-backend.c_should_pack_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@REF_TYPE_NORMAL = common dso_local global i64 0, align 8
@PACK_REFS_ALL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"refs/tags/\00", align 1
@REF_ISSYMREF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.object_id*, i32, i32)* @should_pack_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @should_pack_ref(i8* %0, %struct.object_id* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.object_id*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store %struct.object_id* %1, %struct.object_id** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = call i64 @ref_type(i8* %10)
  %12 = load i64, i64* @REF_TYPE_NORMAL, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %39

15:                                               ; preds = %4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* @PACK_REFS_ALL, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %25, label %20

20:                                               ; preds = %15
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @starts_with(i8* %21, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %20
  store i32 0, i32* %5, align 4
  br label %39

25:                                               ; preds = %20, %15
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* @REF_ISSYMREF, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %25
  store i32 0, i32* %5, align 4
  br label %39

31:                                               ; preds = %25
  %32 = load i8*, i8** %6, align 8
  %33 = load %struct.object_id*, %struct.object_id** %7, align 8
  %34 = load i32, i32* %8, align 4
  %35 = call i32 @ref_resolves_to_object(i8* %32, %struct.object_id* %33, i32 %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %38, label %37

37:                                               ; preds = %31
  store i32 0, i32* %5, align 4
  br label %39

38:                                               ; preds = %31
  store i32 1, i32* %5, align 4
  br label %39

39:                                               ; preds = %38, %37, %30, %24, %14
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local i64 @ref_type(i8*) #1

declare dso_local i32 @starts_with(i8*, i8*) #1

declare dso_local i32 @ref_resolves_to_object(i8*, %struct.object_id*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
